--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ bs4==0.0.1
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
+elasticsearch==7.0.2
+elasticsearch-dsl==7.0.0
 Flask==1.0.3
 html5lib==1.0.1
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+python-dateutil==2.8.0
 requests==2.22.0
 selenium==3.141.0
 six==1.12.0
