--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,10 @@
-beautifulsoup4==4.7.1
+beautifulsoup4==4.8.0
 bs4==0.0.1
-certifi==2019.3.9
-chardet==3.0.4
-Click==7.0
 elasticsearch==7.0.2
 elasticsearch-dsl==7.0.0
-Flask==1.0.3
-html5lib==1.0.1
-idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.10.1
-MarkupSafe==1.1.1
+py-dotenv==0.1
 python-dateutil==2.8.0
-requests==2.22.0
 selenium==3.141.0
 six==1.12.0
-soupsieve==1.9.1
+soupsieve==1.9.2
 urllib3==1.25.3
-webencodings==0.5.1
-Werkzeug==0.15.4
